--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
@@ -20,6 +21,7 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.0.1",
@@ -32,6 +34,7 @@
     "@uform/antd": "^1.0.0-alpha.4",
     "antd": "^3.26.0",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
   }
